--- a/WotStatistics/WargamingAPI/App.config
+++ b/WotStatistics/WargamingAPI/App.config
@@ -1,7 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WotStatistics.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="application_id" value="9adf6dc175f22b26d8f812ca4dd7d7bb"/>
     <add key="url_find_player" value="https://api.worldoftanks.ru/wot/account/list/?application_id="/>
   </appSettings>
+  <applicationSettings>
+    <WotStatistics.Properties.Settings>
+      <setting name="application_id" serializeAs="String">
+        <value>9adf6dc175f22b26d8f812ca4dd7d7bb</value>
+      </setting>
+      <setting name="url_find_player" serializeAs="String">
+        <value>https://api.worldoftanks.ru/wot/account/list/?application_id=</value>
+      </setting>
+    </WotStatistics.Properties.Settings>
+  </applicationSettings>
 </configuration>
