Added new type exception. Add new key in settings.

--- a/WotStatistics/WargamingAPI/App.config
+++ b/WotStatistics/WargamingAPI/App.config
@@ -4,6 +4,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="WotStatistics.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WotStatistics.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <appSettings>
     <add key="application_id" value="9adf6dc175f22b26d8f812ca4dd7d7bb"/>
@@ -19,4 +22,11 @@
       </setting>
     </WotStatistics.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <WotStatistics.Properties.Settings>
+      <setting name="uri_get_stat" serializeAs="String">
+        <value>https://api.worldoftanks.ru/wot/account/info/?application_id=</value>
+      </setting>
+    </WotStatistics.Properties.Settings>
+  </userSettings>
 </configuration>
