Added new field

--- a/WotStatistics/WargamingAPI/App.config
+++ b/WotStatistics/WargamingAPI/App.config
@@ -27,6 +27,9 @@
       <setting name="uri_get_stat" serializeAs="String">
         <value>https://api.worldoftanks.ru/wot/account/info/?application_id=</value>
       </setting>
+      <setting name="uri_get_clan" serializeAs="String">
+        <value>https://api.worldoftanks.ru/wot/clans/info/?application_id=</value>
+      </setting>
     </WotStatistics.Properties.Settings>
   </userSettings>
 </configuration>
