--- a/WotStatistics/ConsoleTest/App.config
+++ b/WotStatistics/ConsoleTest/App.config
@@ -1,6 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <appSettings>
+    <add key="DisToken" value="NjQzNDU4NTYwMTQzMTMwNjQ4.Xcl47Q.oKXO61UbiZCFpF4lmQMSCSzp5a0"/>
+  </appSettings>
 </configuration>
