Added new files. Updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,6 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+*.resx
+*.Designer.cs
