--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: csharp
 mono: none
 dotnet: 3.0.100
-solution: ./WotStatistics/WargamingStat.sln
+solution: WotStatistics/WargamingStat.sln
